// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cross origin iframes > blank.html > should record same-origin iframe in cross-origin iframe 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 5,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 4,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\",
                    \\"id\\": 8,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"iframe\\",
                    \\"attributes\\": {
                      \\"rr_src\\": \\"http://localhost:3030/html/blank.html\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9,
                    \\"selector\\": \\"v1.0: body :: iframe#1\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n      \\\\n    \\\\n  \\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 7,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 3,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 9,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 2,
                        \\"tagName\\": \\"script\\",
                        \\"attributes\\": {
                          \\"type\\": \\"text/javascript\\"
                        },
                        \\"childNodes\\": [
                          {
                            \\"type\\": 3,
                            \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                            \\"rootId\\": 11,
                            \\"id\\": 15,
                            \\"isVisible\\": false
                          }
                        ],
                        \\"rootId\\": 11,
                        \\"id\\": 14,
                        \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                        \\"isVisible\\": false,
                        \\"isInteractive\\": false
                      }
                    ],
                    \\"rootId\\": 11,
                    \\"id\\": 13,
                    \\"selector\\": \\"v1.0: html :: head#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 11,
                    \\"id\\": 16,
                    \\"selector\\": \\"v1.0: html :: body#2\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  }
                ],
                \\"rootId\\": 11,
                \\"id\\": 12,
                \\"selector\\": \\"v1.0: html :: html\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 11
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 16,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"iframe\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"rootId\\": 11,
            \\"id\\": 17,
            \\"selector\\": \\"v1.0: body :: iframe#1\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 17,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 18,
                    \\"id\\": 20,
                    \\"selector\\": \\"v1.0: html :: head#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"Same-origin iframe in cross-origin iframe\\",
                        \\"rootId\\": 18,
                        \\"id\\": 22,
                        \\"isVisible\\": true
                      }
                    ],
                    \\"rootId\\": 18,
                    \\"id\\": 21,
                    \\"selector\\": \\"v1.0: html :: body#2\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  }
                ],
                \\"rootId\\": 18,
                \\"id\\": 19,
                \\"selector\\": \\"v1.0: html :: html\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 18
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  }
]"
`;

exports[`cross origin iframes > form.html > should map scroll events correctly 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 5,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 4,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n            \\",
                    \\"id\\": 8,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"iframe\\",
                    \\"attributes\\": {
                      \\"style\\": \\"width: 400px; height: 400px;\\",
                      \\"rr_src\\": \\"http://localhost:3030/html/form.html\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9,
                    \\"selector\\": \\"v1.0: body :: iframe#1\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\\\n        \\\\n      \\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 7,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 3,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 9,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 2,
                        \\"tagName\\": \\"script\\",
                        \\"attributes\\": {
                          \\"type\\": \\"text/javascript\\"
                        },
                        \\"childNodes\\": [
                          {
                            \\"type\\": 3,
                            \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                            \\"rootId\\": 11,
                            \\"id\\": 15,
                            \\"isVisible\\": false
                          }
                        ],
                        \\"rootId\\": 11,
                        \\"id\\": 14,
                        \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                        \\"isVisible\\": false,
                        \\"isInteractive\\": false
                      }
                    ],
                    \\"rootId\\": 11,
                    \\"id\\": 13,
                    \\"selector\\": \\"v1.0: html :: head#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 11,
                    \\"id\\": 16,
                    \\"selector\\": \\"v1.0: html :: body#2\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  }
                ],
                \\"rootId\\": 11,
                \\"id\\": 12,
                \\"selector\\": \\"v1.0: html :: html\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 11
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [
        {
          \\"id\\": 9,
          \\"attributes\\": {
            \\"style\\": \\"width: Npx; height: Npx;\\"
          },
          \\"selector\\": \\"v1.0: body :: iframe#1\\"
        }
      ],
      \\"removes\\": [],
      \\"adds\\": []
    }
  }
]"
`;

exports[`cross origin iframes > move-node.html > captures mutations on adopted stylesheets 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 5,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 4,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n            \\",
                    \\"id\\": 8,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"iframe\\",
                    \\"attributes\\": {
                      \\"rr_src\\": \\"http://localhost:3030/html/move-node.html\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9,
                    \\"selector\\": \\"v1.0: body :: iframe#1\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\\\n        \\\\n      \\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 7,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 3,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 9,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 2,
                        \\"tagName\\": \\"script\\",
                        \\"attributes\\": {
                          \\"type\\": \\"text/javascript\\"
                        },
                        \\"childNodes\\": [
                          {
                            \\"type\\": 3,
                            \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                            \\"rootId\\": 11,
                            \\"id\\": 15,
                            \\"isVisible\\": false
                          }
                        ],
                        \\"rootId\\": 11,
                        \\"id\\": 14,
                        \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                        \\"isVisible\\": false,
                        \\"isInteractive\\": false
                      }
                    ],
                    \\"rootId\\": 11,
                    \\"id\\": 13,
                    \\"selector\\": \\"v1.0: html :: head#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 11,
                    \\"id\\": 16,
                    \\"selector\\": \\"v1.0: html :: body#2\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  }
                ],
                \\"rootId\\": 11,
                \\"id\\": 12,
                \\"selector\\": \\"v1.0: html :: html\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 11
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 15,
      \\"id\\": 1,
      \\"styleIds\\": [
        1
      ],
      \\"styles\\": [
        {
          \\"styleId\\": 1,
          \\"rules\\": []
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 15,
      \\"id\\": 11,
      \\"styleIds\\": [
        2
      ],
      \\"styles\\": [
        {
          \\"styleId\\": 2,
          \\"rules\\": []
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"styleId\\": 1,
      \\"replace\\": \\"div { color: yellow; }\\"
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"styleId\\": 2,
      \\"replace\\": \\"h1 { color: blue; }\\"
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"styleId\\": 1,
      \\"replaceSync\\": \\"div { display: inline ; }\\"
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"styleId\\": 2,
      \\"replaceSync\\": \\"h1 { font-size: large; }\\"
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 13,
      \\"styleId\\": 1,
      \\"set\\": {
        \\"property\\": \\"color\\",
        \\"value\\": \\"green\\"
      },
      \\"index\\": [
        0
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 13,
      \\"styleId\\": 1,
      \\"remove\\": {
        \\"property\\": \\"display\\"
      },
      \\"index\\": [
        0
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 13,
      \\"styleId\\": 2,
      \\"set\\": {
        \\"property\\": \\"font-size\\",
        \\"value\\": \\"medium\\",
        \\"priority\\": \\"important\\"
      },
      \\"index\\": [
        0
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"styleId\\": 2,
      \\"adds\\": [
        {
          \\"rule\\": \\"h2 { color: red; }\\"
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"styleId\\": 1,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { border: 2px solid blue; }\\",
          \\"index\\": 1
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"styleId\\": 2,
      \\"removes\\": [
        {
          \\"index\\": 0
        }
      ]
    }
  }
]"
`;

exports[`cross origin iframes > move-node.html > captures mutations on stylesheets 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 5,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 4,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n            \\",
                    \\"id\\": 8,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"iframe\\",
                    \\"attributes\\": {
                      \\"rr_src\\": \\"http://localhost:3030/html/move-node.html\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9,
                    \\"selector\\": \\"v1.0: body :: iframe#1\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\\\n        \\\\n      \\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 7,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 3,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 9,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 2,
                        \\"tagName\\": \\"script\\",
                        \\"attributes\\": {
                          \\"type\\": \\"text/javascript\\"
                        },
                        \\"childNodes\\": [
                          {
                            \\"type\\": 3,
                            \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                            \\"rootId\\": 11,
                            \\"id\\": 15,
                            \\"isVisible\\": false
                          }
                        ],
                        \\"rootId\\": 11,
                        \\"id\\": 14,
                        \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                        \\"isVisible\\": false,
                        \\"isInteractive\\": false
                      }
                    ],
                    \\"rootId\\": 11,
                    \\"id\\": 13,
                    \\"selector\\": \\"v1.0: html :: head#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 11,
                    \\"id\\": 16,
                    \\"selector\\": \\"v1.0: html :: body#2\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  }
                ],
                \\"rootId\\": 11,
                \\"id\\": 12,
                \\"selector\\": \\"v1.0: html :: html\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 11
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 4,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"style\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"id\\": 17,
            \\"selector\\": \\"v1.0: html :: head#1 > style#2\\",
            \\"isVisible\\": false,
            \\"isInteractive\\": false
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 13,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"style\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"rootId\\": 11,
            \\"id\\": 18,
            \\"selector\\": \\"v1.0: html :: head#1 > style#2\\",
            \\"isVisible\\": false,
            \\"isInteractive\\": false
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 17,
      \\"adds\\": [
        {
          \\"rule\\": \\"div { color: yellow; }\\"
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 18,
      \\"adds\\": [
        {
          \\"rule\\": \\"h1 { color: blue; }\\"
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 13,
      \\"id\\": 17,
      \\"set\\": {
        \\"property\\": \\"color\\",
        \\"value\\": \\"green\\"
      },
      \\"index\\": [
        0
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 13,
      \\"id\\": 17,
      \\"remove\\": {
        \\"property\\": \\"display\\"
      },
      \\"index\\": [
        0
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 13,
      \\"id\\": 18,
      \\"set\\": {
        \\"property\\": \\"font-size\\",
        \\"value\\": \\"medium\\",
        \\"priority\\": \\"important\\"
      },
      \\"index\\": [
        0
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 18,
      \\"adds\\": [
        {
          \\"rule\\": \\"h2 { color: red; }\\"
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 17,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { border: 2px solid blue; }\\",
          \\"index\\": 1
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 18,
      \\"removes\\": [
        {
          \\"index\\": 0
        }
      ]
    }
  }
]"
`;

exports[`cross origin iframes > move-node.html > should record custom events 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 5,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 4,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n            \\",
                    \\"id\\": 8,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"iframe\\",
                    \\"attributes\\": {
                      \\"rr_src\\": \\"http://localhost:3030/html/move-node.html\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 9,
                    \\"selector\\": \\"v1.0: body :: iframe#1\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\\\n        \\\\n      \\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 7,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 3,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 9,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 2,
                        \\"tagName\\": \\"script\\",
                        \\"attributes\\": {
                          \\"type\\": \\"text/javascript\\"
                        },
                        \\"childNodes\\": [
                          {
                            \\"type\\": 3,
                            \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                            \\"rootId\\": 11,
                            \\"id\\": 15,
                            \\"isVisible\\": false
                          }
                        ],
                        \\"rootId\\": 11,
                        \\"id\\": 14,
                        \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                        \\"isVisible\\": false,
                        \\"isInteractive\\": false
                      }
                    ],
                    \\"rootId\\": 11,
                    \\"id\\": 13,
                    \\"selector\\": \\"v1.0: html :: head#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 11,
                    \\"id\\": 16,
                    \\"selector\\": \\"v1.0: html :: body#2\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  }
                ],
                \\"rootId\\": 11,
                \\"id\\": 12,
                \\"selector\\": \\"v1.0: html :: html\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 11
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  },
  {
    \\"type\\": 5,
    \\"data\\": {
      \\"tag\\": \\"test\\",
      \\"payload\\": {
        \\"id\\": 11,
        \\"parentId\\": 11,
        \\"nextId\\": 12
      }
    }
  }
]"
`;

exports[`same origin iframes > should emit contents of iframe once 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 5,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 4,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"iframe\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"id\\": 9,
                    \\"selector\\": \\"v1.0: body :: iframe#1\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 7,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 3,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 9,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 11,
                    \\"id\\": 13,
                    \\"selector\\": \\"v1.0: html :: head#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 11,
                    \\"id\\": 14,
                    \\"selector\\": \\"v1.0: html :: body#2\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  }
                ],
                \\"rootId\\": 11,
                \\"id\\": 12,
                \\"selector\\": \\"v1.0: html :: html\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 11
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 13,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"script\\",
            \\"attributes\\": {
              \\"type\\": \\"text/javascript\\"
            },
            \\"childNodes\\": [],
            \\"rootId\\": 11,
            \\"id\\": 15,
            \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
            \\"isVisible\\": false,
            \\"isInteractive\\": false
          }
        },
        {
          \\"parentId\\": 15,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 3,
            \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
            \\"rootId\\": 11,
            \\"id\\": 16,
            \\"isVisible\\": false
          }
        }
      ]
    }
  }
]"
`;

exports[`same origin iframes > should record cross-origin iframe in same-origin iframe 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"script\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text/javascript\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                        \\"id\\": 6,
                        \\"isVisible\\": false
                      }
                    ],
                    \\"id\\": 5,
                    \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  }
                ],
                \\"id\\": 4,
                \\"selector\\": \\"v1.0: html :: head#1\\",
                \\"isVisible\\": false,
                \\"isInteractive\\": false
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 8,
                    \\"isVisible\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"iframe\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"id\\": 9,
                    \\"selector\\": \\"v1.0: body :: iframe#1\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 10,
                    \\"isVisible\\": false
                  }
                ],
                \\"id\\": 7,
                \\"selector\\": \\"v1.0: html :: body#2\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"id\\": 3,
            \\"selector\\": \\"v1.0: html :: html\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 9,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 11,
                    \\"id\\": 13,
                    \\"selector\\": \\"v1.0: html :: head#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 11,
                    \\"id\\": 14,
                    \\"selector\\": \\"v1.0: html :: body#2\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  }
                ],
                \\"rootId\\": 11,
                \\"id\\": 12,
                \\"selector\\": \\"v1.0: html :: html\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 11
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 13,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"script\\",
            \\"attributes\\": {
              \\"type\\": \\"text/javascript\\"
            },
            \\"childNodes\\": [],
            \\"rootId\\": 11,
            \\"id\\": 15,
            \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
            \\"isVisible\\": false,
            \\"isInteractive\\": false
          }
        },
        {
          \\"parentId\\": 15,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 3,
            \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
            \\"rootId\\": 11,
            \\"id\\": 16,
            \\"isVisible\\": false
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 14,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"iframe\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"rootId\\": 11,
            \\"id\\": 17,
            \\"selector\\": \\"v1.0: body :: iframe#1\\",
            \\"isVisible\\": true,
            \\"isInteractive\\": false
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 17,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 2,
                        \\"tagName\\": \\"script\\",
                        \\"attributes\\": {
                          \\"type\\": \\"text/javascript\\"
                        },
                        \\"childNodes\\": [
                          {
                            \\"type\\": 3,
                            \\"textContent\\": \\"SCRIPT_PLACEHOLDER\\",
                            \\"rootId\\": 18,
                            \\"id\\": 22,
                            \\"isVisible\\": false
                          }
                        ],
                        \\"rootId\\": 18,
                        \\"id\\": 21,
                        \\"selector\\": \\"v1.0: html :: head#1 > script[type=\\\\\\"text/javascript\\\\\\"]#1\\",
                        \\"isVisible\\": false,
                        \\"isInteractive\\": false
                      }
                    ],
                    \\"rootId\\": 18,
                    \\"id\\": 20,
                    \\"selector\\": \\"v1.0: html :: head#1\\",
                    \\"isVisible\\": false,
                    \\"isInteractive\\": false
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 18,
                    \\"id\\": 23,
                    \\"selector\\": \\"v1.0: html :: body#2\\",
                    \\"isVisible\\": true,
                    \\"isInteractive\\": false
                  }
                ],
                \\"rootId\\": 18,
                \\"id\\": 19,
                \\"selector\\": \\"v1.0: html :: html\\",
                \\"isVisible\\": true,
                \\"isInteractive\\": false
              }
            ],
            \\"compatMode\\": \\"BackCompat\\",
            \\"id\\": 18
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  }
]"
`;
